--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -62,10 +62,10 @@ body {
     transform: rotate(1turn);
   }
 }
-.single__description{
+.single__description {
   padding-top: 20px;
   p {
-    padding: 16px ;
+    padding: 16px;
   }
   img {
     margin: auto;
@@ -75,7 +75,7 @@ body {
 .content-blog {
   padding-top: 20px;
   p {
-    padding: 16px ;
+    padding: 16px;
   }
   img {
     margin: auto;
@@ -505,6 +505,15 @@ h5 {
     background-color: #fff;
     transition: all 0.3s ease;
     border-left: 1px solid #e5e5e5;
+    @include breakpoint(mobile) {
+      flex-direction: column;
+      position: relative;
+      height: auto;
+      right: 0;
+      width: auto;
+      border: none;
+      background-color: transparent;
+    }
     @include breakpoint(tablet-lg) {
       position: relative;
       height: auto;
@@ -1464,13 +1473,14 @@ h5 {
     }
   }
   .site-footer__description {
-    margin-right: auto;
     margin-bottom: 70px;
     @include breakpoint(phone) {
-      width: 400px;
+      // width: 400px;
+      // width: 100%;
       margin-bottom: 50px;
     }
     @include breakpoint(tablet-lg) {
+      // width: 100%;
       margin-bottom: 0;
     }
     svg {
@@ -1501,7 +1511,7 @@ h5 {
     margin-top: 20px;
     li {
       font-size: 21px;
-      margin-right: 25px;
+      margin-right: 12px;
     }
   }
   .site-footer__links {
@@ -1525,13 +1535,15 @@ h5 {
         margin-right: 0;
       }
       li {
-        font-size: 14px;
+        font-size: 15px;
         color: #000;
         margin-bottom: 12px;
         @include breakpoint(phone) {
           margin-bottom: 15px;
         }
         &:first-child {
+        font-size: 18px;
+
           font-weight: 600;
           margin-bottom: 26px;
           @include breakpoint(phone) {
@@ -2084,7 +2096,7 @@ h5 {
     flex-wrap: wrap;
     @include breakpoint(phone) {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
     }
     .product-description-block {
       text-align: center;
