--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1495,7 +1495,7 @@ h5 {
       color: #000;
       font-weight: 300;
       align-items: center;
-      margin-bottom: 33px;
+      // margin-bottom: 33px;
       span {
         font-weight: 400;
         color: var(--color-orange);
