--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -75,7 +75,7 @@ body {
 .content-blog {
   padding-top: 20px;
   p {
-    padding: 16px;
+    padding-bottom: 16px;
   }
   img {
     margin: auto;
@@ -208,8 +208,8 @@ body {
   box-sizing: border-box;
   background-color: white;
   font-family: var(--main-font);
-  color: var(--color-text);
-  font-size: 16px;
+  // color: var(--color-text);
+  font-size: 18px;
   &.body--with-footer {
     .main {
       align-items: normal;
@@ -1515,12 +1515,15 @@ h5 {
     }
   }
   .site-footer__links {
+    justify-content: center;
     @include breakpoint(phone) {
       display: flex;
       width: 100%;
     }
     @include breakpoint(tablet-lg) {
       width: auto;
+    width: 100%;
+
     }
     ul {
       margin-bottom: 40px;
@@ -2149,7 +2152,7 @@ h5 {
       margin-right: 110px;
     }
     .product-gallery__thumbs {
-      height: 300px;
+      // height: 300px;
       @include breakpoint(phone) {
         height: 491px;
       }
@@ -2301,12 +2304,13 @@ h5 {
 
 .product-gallery {
   display: flex;
+  
   margin-bottom: 40px;
   @include breakpoint(phone) {
     margin-bottom: 0;
   }
   .product-gallery__thumbs {
-    display: none;
+    display: flex;
     @include breakpoint(phone) {
       width: 97px;
       display: block;
@@ -3167,7 +3171,10 @@ h5 {
 
 .checkout-items {
   .checkout-item {
+    padding-bottom: 2px;
+    border-bottom: 1px solid #eee;
     display: flex;
+    cursor: pointer;
     align-items: center;
     margin-bottom: 23px;
     justify-content: space-between;
@@ -3195,6 +3202,19 @@ h5 {
         border-radius: 100%;
         img {
           border-radius: 100%;
+          object-fit: cover;
+          width: 100%;
+          height: 100%;
+        }
+      }
+      .checkout-item__img2 {
+        width: 51px;
+        height: 51px;
+        flex-shrink: 0;
+        margin-right: 16px;
+        border-radius: 100%;
+        img {
+          border-radius: 10%;
           object-fit: cover;
           width: 100%;
           height: 100%;
